--- a/game-engine/src/App.css
+++ b/game-engine/src/App.css
@@ -1,13 +1,15 @@
-#center-div {
+#game-window-div {
     background: rgb(6, 6, 6); /* Just to visualize the extent */
+    height: 600px;
+    width: 1200px;
     display: flex;
-    justify-content: center;
     align-items: center;
     position: fixed;
-    top: 0;
-    left: 0;
+    top: 50%;
+    left: 50%;
     bottom: 0;
     right: 0;
-    overflow: auto;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
     border: 3px solid green;
 }
