--- a/game-engine/src/App.css
+++ b/game-engine/src/App.css
@@ -3,7 +3,7 @@
     height: 600px;
     width: 1200px;
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     position: fixed;
     top: 50%;
     left: 50%;
